<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/newpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newuername"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/yourpassword" />
        
        <EditText
            android:id="@+id/newpassword_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newpassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_again" />

        <EditText
            android:id="@+id/newuername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/accountname"
            android:inputType="textPersonName">
        </EditText>

        <EditText
            android:id="@+id/emailadress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newpassword_again"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_adress">

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/addaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailadress"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:text="@string/register" 
            android:onClick="onClick"/>

    </RelativeLayout>

</LinearLayout>
