<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_centerHorizontal="true"
            android:text="@string/signin" 
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="60dip"
            android:src="@drawable/ic_launcher_contacts" />

        <EditText
            android:id="@+id/uesername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView1"
            android:layout_toRightOf="@+id/imageView1"
            android:ems="10" 
            android:hint="@string/youraccount"/>
        
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageView1"
            android:layout_below="@+id/uesername"
            android:ems="10" 
            android:inputType="textPassword"
            android:hint="@string/password"/>
        
        

         <Button
             android:id="@+id/signin_button"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="200dp"
             android:onClick="onClick"
             android:text="@string/signin" />
         
         <Button
             android:id="@+id/newaccount_button"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/signin_button"
             android:onClick="onClick"
             android:text="@string/new_account" />

         <CheckBox
             android:id="@+id/displaymima"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/imageView1"
             android:text="@string/show_password"
             android:layout_marginTop="150dp"
             android:onClick="onCheckboxClicked"
             android:textColor="#000000" />

         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageView1"
             android:layout_toLeftOf="@+id/uesername"
             android:src="@drawable/ic_dialog_browser_certificate_secure" />

    </RelativeLayout>

</LinearLayout>