<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/play_activity"
    android:background="@drawable/default_album_1">

    <TextView
        android:id="@+id/musicname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:textSize="24sp"
        android:text="@string/musicname" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="19dp"
        android:text="@string/duration" />

    <TextView
        android:id="@+id/currenttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:text="@string/currenttime" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/playbutton"
        android:max="1000"
        android:layout_alignParentLeft="true" />

    <ImageButton
        android:id="@+id/playbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:background="#00000000"
        android:onClick="onClick"
        android:src="@drawable/suspend_sel" />

    <ImageButton
        android:id="@+id/lastbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seekBar1"
        android:background="#00000000"
        android:onClick="onClick"
        android:layout_marginLeft="50dp"
        android:src="@drawable/ic_media_previous_sel" />

    <ImageButton
        android:id="@+id/nextbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_weight="1"
        android:background="#00000000"
        android:onClick="onClick"
        android:layout_marginRight="50dp"
        android:src="@drawable/ic_media_next_sel" />

    <ImageButton
        android:id="@+id/playformat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp"
        android:layout_marginRight="30dp"
        android:background="#00000000"
        android:onClick="onClick"
        android:src="@drawable/ic_mp_repeat_all_btn"/>

</RelativeLayout>
